--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1135,7 +1135,7 @@ img.organizationlogo {
 }
 
 .projectdetail .project-img-sec .img-sec {
-    width: 50%;
+    width: 70%;
 }
 .projectdetail .project-img-sec .img-sec img {
     object-fit: cover;
@@ -1247,7 +1247,7 @@ img.organizationlogo {
 
     .projectdetail .project-img-sec .thumbnail {width: 30%; }
 
-    .projectdetail .project-img-sec .img-sec {width: 70%; }
+    .projectdetail .project-img-sec .img-sec {width: 100%; }
 
     /**/
     .projectdetail .project-detail-sec .left-sec {
@@ -1371,7 +1371,7 @@ img.organizationlogo {
     right: -10px;
     border-radius: 20px;
     background: rgba(0,0,0,0.8);
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
     color: #fff;
     text-decoration:none;
@@ -1392,15 +1392,20 @@ img.organizationlogo {
 .amsvideo-thumb { position: relative; }
 
 .amsvideo-thumb a {
-  position: absolute;
-  display: block;
-  background: url(../img/amsplay-btn.png);
-  height: 100%;
-  width: 100%;
-  top: 20px;
-  left: 60px;
-  background-size: 50px 50px;
-  background-repeat: no-repeat;
+    position: absolute;
+    display: block;
+    background: url(../img/amsplay-btn.png);
+    height: 50px;
+    width: 50px;
+    top: 50%;
+    left: 50%;
+    background-size: contain;
+    background-repeat: no-repeat;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 
 /*AMS Login form*/
@@ -1522,14 +1527,20 @@ img.organizationlogo {
   -o-transition: background 0.15s linear;
   transition: background 0.15s linear;
 }
-.close-btn {
-  position: absolute;
-  right: 0;
-  top: -30px;
-  cursor: pointer;
-  z-index: 99;
-  font-size: 30px;
-  color: #fff;
+.amsloginpopup .close-btn {
+  width: 25px;
+    height: 25px;
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    border-radius: 20px;
+    background: rgba(0,0,0,0.8);
+    font-size: 15px;
+    text-align: center;
+    color: #fff;
+    z-index: 99;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 @media screen and (min-width:800px){
@@ -1544,4 +1555,59 @@ img.organizationlogo {
 }
 @media screen and (max-width:799px){
   .custom-model-inner{margin-top: 45px;}
+}
+
+.paymentdiv
+{
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.paymentclass
+{
+    padding: 10px;
+    color: #fff;
+    background-color: #03c4eb;
+    border-radius: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.paymentclass:active, .paymentclass:focus, .paymentclass:hover
+{ 
+    text-decoration: none;
+    color: #fff;
+    font-weight: 700;
+}    
+
+.video-main {
+    position: relative;
+}
+
+.video-main .video-icon {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    background: url(../img/amsplay-btn.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+
+@media (max-width:767px){
+.amsvideos .video-row .video-col {margin: 8px; width: calc(50% - 16px);}
+}
+
+
+
+@media (max-width:481px){
+.amsvideo-thumb a {width: 30px; height: 30px; }
 }
