--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1562,8 +1562,9 @@ img.organizationlogo {
 .paymentdiv
 {
     width: 100%;
-    margin: 0 auto;
+    /*margin: 0 auto;*/
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .paymentclass
@@ -1635,3 +1636,8 @@ img.organizationlogo {
     height: 100px;
     padding-right: 5px;
 } 
+
+.amsmargintop
+{
+    margin-top: 10px;
+}
