--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
     text-decoration: none !important;
 }
 
-.main-content{margin-top: 15px;}
+.main-content{margin-top: 15px; width: fit-content;}
 .main-content .left-col{flex-basis:30%}
 .main-content .right-col{flex-basis:70% ;margin-left: 20px;}
 .right-col-wrap {width: 100%; display: flex; flex-wrap: wrap; }
@@ -297,7 +297,7 @@ p.price-non-mem {
 
 .eventdetail { width: 100%;}
 
-.eventdetail .event-img-sec {width: 100%; display: flex; flex-wrap: wrap; }
+.eventdetail .event-img-sec {width: 100%; display: flex; /*flex-wrap: wrap;*/ }
 .eventdetail .event-img-sec .img-sec {width: 65%; }
 .eventdetail .event-img-sec .ing-title {width: 35%; padding: 60px 30px 0; background-color: #ececec; }
 .eventdetail .event-img-sec .ing-title h1{font-size: 20px; color: #1E0A3C; font-weight: bold; text-transform: capitalize; line-height: 1.5;}
@@ -323,7 +323,7 @@ p.price-non-mem {
 .eventdetail .event-img-sec .ing-title {padding: 60px 25px 0;}
 .eventdetail .event-img-sec .ing-title h1 {font-size: 18px;}
 .eventdetail .event-detail-sec .left-sec {padding: 60px 20px; }
-
+.eventdetail .event-img-sec { flex-wrap: wrap; }
 
 
 }
@@ -1620,6 +1620,7 @@ img.organizationlogo {
   padding: 5px 14px;
   cursor: pointer;
   font-size: 14px;
+  margin-top: 10px;
   border-radius: 5px;
 }
 
