--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@
     text-decoration: none !important;
 }
 
-.main-content{margin-top: 15px; width: fit-content;}
+.main-content{margin-top: 15px; /*width: fit-content;*/}
 .main-content .left-col{flex-basis:30%}
 .main-content .right-col{flex-basis:70% ;margin-left: 20px;}
 .right-col-wrap {width: 100%; display: flex; flex-wrap: wrap; }
@@ -460,7 +460,7 @@ img.member-image {
     width: 30%;
 }
 
-.product-content{width: 70%;padding-left: 20px; align-self: center;}
+.product-content{width: 60%;padding-left: 20px; align-self: center;}
 
 .listview-events {
     width: 90%;
@@ -1647,4 +1647,11 @@ img.organizationlogo {
     clear: both;
     text-align: center;
     padding: 10px 0;
+}
+
+.audio-col {
+    width: 100px;
+    display: inline-block;
+    clear: both;
+    margin-right: 10px;
 }
