Calender detaila page css changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1803,3 +1803,7 @@ img.organizationlogo {
 .ams-content .eventdetail .fc-content {
     text-align: center;
 }
+
+.externaldiv{
+    padding-bottom: 15px;
+}
