--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -676,7 +676,7 @@ line-height: 28px;
     line-height: 60px;
     position: absolute;
     top: 0;
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
 }
 
@@ -757,7 +757,7 @@ line-height: 28px;
 /*End for member*/
 
 .event-detail-sec .tab-content {
-    padding: 60px 0px 20px;
+    padding: 75px 0px 20px;
     width: 100%;
     min-height: auto;
 }
@@ -1806,4 +1806,65 @@ img.organizationlogo {
 
 .externaldiv{
     padding-bottom: 15px;
+}
+
+.assetsdetail table
+{
+    margin: 0px !important;
+}
+
+.assetsdetail hr.fc-divider {
+    display: block;
+}
+
+.event-detail-sec #tab-1:checked~.labels #label-tab-1,.event-detail-sec #tab-2:checked~.labels #label-tab-2,.event-detail-sec #tab-3:checked~.labels #label-tab-3 {
+    border-bottom: 3px solid #000;
+    background: #fff;
+}
+
+.event-detail-sec .tabs>input {
+    opacity: 0 !important;
+    width: auto !important;
+    height: auto !important;
+    line-height: unset !important;
+    position: absolute !important;
+}
+
+.event-detail-sec .labels label {
+    cursor: pointer;
+    display: inline-block;
+    padding: 15px;
+    background: #f1f1f1;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.event-detail-sec .tabs .labels {
+    display: flex;
+    flex-wrap: wrap;
+}.event-detail-sec #tab-1:checked~.labels #label-tab-1,.event-detail-sec #tab-2:checked~.labels #label-tab-2,.event-detail-sec #tab-3:checked~.labels #label-tab-3 {
+    border-bottom: 3px solid #000;
+    background: #fff;
+}
+
+.event-detail-sec .tabs>input {
+    opacity: 0 !important;
+    width: auto !important;
+    height: auto !important;
+    line-height: unset !important;
+    position: absolute !important;
+}
+
+.event-detail-sec .labels label {
+    cursor: pointer;
+    display: inline-block;
+    padding: 15px;
+    background: #f1f1f1;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.event-detail-sec .tabs .labels {
+    display: flex;
+    flex-wrap: wrap;
 }
