--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1944,3 +1944,17 @@ a.ex1:hover, a.ex1:active {
     background-color: #728641 !important;
     border-color: #728641 !important;
 }
+
+.eventbuttonloader{
+    position: absolute;
+    top:0px;
+    right:0px;
+    width:100%;
+    height:50%;
+    background-image: url(../img/buttonloader.gif);
+    background-size: 50px;
+    background-repeat:no-repeat;
+    background-position:center;
+    z-index:10000000;
+    filter: alpha(opacity=40);
+}
