--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,7 +364,7 @@ p.price-non-mem {
     margin-top: 20px;
 }
 .enrollment h3{font-size: 15px;margin-bottom: 5px;}
-.enrollment p{font-size: 16px;padding-bottom: 10px;}
+.enrollment p{font-size: 16px;padding-bottom: 10px; margin-bottom: 20px;}
 .alltypeevent .ul-cat-wrap, .allstatus .ul-cat-wrap, .evtlocation .ul-cat-wrap, .taglabels .ul-cat-wrap {
     padding: 0px 15px;
     font-size: 16px;
@@ -1781,7 +1781,7 @@ img.organizationlogo {
 
 .projectpagebanner .video-main img
 {
-    height: 422px !important;
+    height: 100% !important;
     object-fit: fill !important;
 }
 
